# tsbazel-proto

./: Brewfile  Brewfile.lock.json  WORKSPACE  package.json
web/: BUILD.bazel  app.tsx  index.html  tsconfig.json  webpack.config.js
